@@ -1,6 +1,9 @@
 Lzma SDK for Objective-C based on extended functionality of the C++ LZMA code
 
-Changes on version 2.0.2 (current):
+Changes on version 2.0.3 (current):
+- Remove redurant string conversion code.
+
+Changes on version 2.0.2:
 - Fix encode settings count.
 
 Changes on version 2.0.1:
